--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -27,6 +27,7 @@
                             <p class="my-0"><strong>{{ item.product.name }}</strong></p>
                             <p class="my-0 small">Weight: {{ item.weight }}</p>
                             <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
+                            <p class="my-0"><strong>£{{ item.price }}</strong></p>
                         </div>
                     </div>
                 {% endfor %}
