--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -12,11 +12,31 @@
                     <div class="row">
                         {% for item in bag_items %}
                             <div class="col-12">
-                                <h4>{{ item.product.name }} at Weight: {{ item.weight }}, Amount: {{ item.quantity }}, Total: {{ item.subtotal }}</h4>
+                                <h4>{{ item.product.name }}</h4>
                                 <img src="{{ item.product.picture.url }}"
                                      alt="{{ item.product.name }}"
                                      width="200px"
                                      height="auto">
+
+                                <form action="{% url 'edit_bag' product_id=item.product.id %}" method="post">
+                                    {% csrf_token %}
+                                    <label for="weight">Weight:</label>
+                                    <select name="weight" class="form-control w-50 d-inline">
+                                        {% for w in weight_options %}
+                                            <option value="{{ w }}" {% if w == weight %}selected{% endif %}>{{ w }}g</option>
+                                        {% endfor %}
+                                    </select>
+
+                                    <!-- Quantity Input -->
+                                    <label for="quantity">Quantity:</label>
+                                    <input type="number"
+                                           name="quantity"
+                                           value="{{ item.quantity }}"
+                                           min="0"
+                                           class="form-control w-25 d-inline">
+
+                                    <button type="submit" class="btn btn-sm btn-primary">Update</button>
+                                </form>
                             </div>
                         {% endfor %}
                     </div>
